[project]
name = "pile-forces-calculator"
version = "0.3.0"
description = "Pile Forces Calculator — distributes structural reaction forces into individual pile foundation forces (CLI + hosted Streamlit app)"
requires-python = ">=3.11"
# Core dependencies: exactly what the CLI needs, kept lean so
# `uvx` / `uv tool install` stays fast. The Streamlit web app's extra
# packages live under the optional [web] extra (see below).
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "typst>=0.12",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# Streamlit web frontend (hosted at https://pileforcescalculator.streamlit.app/).
# Also used by requirements.txt for the Streamlit Cloud deployment.
web = [
    "streamlit>=1.30",
    "plotly>=5.18",
    # Pinned <1.0: kaleido>=1.0 requires a separate Google Chrome/Chromium
    # install (via Choreographer) to render PNGs, which isn't available on
    # Streamlit Community Cloud. 0.2.x bundles its own static binary.
    "kaleido>=0.2.1,<1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
pile-forces = "pile_forces.cli:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pile_forces"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long f-strings in reporter/config are intentional

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["src/pile_forces"]
